# broodrep

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
broodrep/: Cargo.toml
broodrep-cli/: Cargo.toml
broodrep-cli/src/: main.rs
broodrep-wasm/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  vite.config.js
broodrep-wasm/examples/: index.html  usage.js  usage.mjs
broodrep-wasm/src/: lib.rs
broodrep/src/: compression.rs  lib.rs  shieldbattery.rs
broodrep/testdata/: all_zeroes_1MB.impode  empty.rep  not_a_replay.rep  sb_data.rep  scr_old.rep  scr_replay.rep  things.rep
