[package]
name = "broodrep-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShieldBattery/broodrep"
description = "WebAssembly bindings for the broodrep StarCraft replay parser"
authors = ["broodrep contributors"]

[lib]
crate-type = ["cdylib"]

[dependencies]
broodrep = { path = "../broodrep" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
