[package]
name = "broodrep"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShieldBattery/broodrep"
description = "A pure Rust library for reading StarCraft 1 replay files"

[dependencies]
byteorder = "1.5"
chrono = { version = "0.4" }
explode = "0.1"
flate2 = "1.1"
thiserror = "2.0"
